--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en" ng-app="App">
 <head>
   <meta charset="utf-8">
-  <base href="/">
   <title page-title></title>
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
   <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -16,19 +15,19 @@
   <link rel="stylesheet" href="bootstrap.css">
   <link rel="stylesheet" href="styles.css">
   <!-- endinject -->
-  <script src="task-2/angular.js"></script>
-  <script src="task-2/angular-animate.js"></script>
-  <script src="task-2/angular-aria.js"></script>
-  <script src="task-2/angular-material.js"></script>
-  <script src="task-2/angular-ui-router.js"></script>
-  <script src="task-2/angular-sanitize.js"></script>
-  <script src="task-2/ui-bootstrap.js"></script>
-  <script src="task-2/page-title.js"></script>
+  <script src="angular.js"></script>
+  <script src="angular-animate.js"></script>
+  <script src="angular-aria.js"></script>
+  <script src="angular-material.js"></script>
+  <script src="angular-ui-router.js"></script>
+  <script src="angular-sanitize.js"></script>
+  <script src="ui-bootstrap.js"></script>
+  <script src="page-title.js"></script>
 
   <script src=""></script>
   <!-- inject:js -->
-  <script src="task-2/bundle.js"></script>
-  <script src="task-2/templates.js"></script>
+  <script src="bundle.js"></script>
+  <script src="templates.js"></script>
   <!-- endinject -->
 
 </head>
