--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" ng-app="App">
 <head>
   <meta charset="utf-8">
+  <base href="">
   <title page-title></title>
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
   <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
